# swagger.json
@@ -384,7 +384,6 @@
         }
       },
       "post": {
-        "description": "",
         "tags": [
           "Groups"
         ],
@@ -402,17 +401,7 @@
                   "type": "string",
                   "example": "Friday Night Group"
                 },
-                "votes": {
-                  "example": "any"
-                },
                 "winVote": {
-                  "example": "any"
-                },
-                "membersID": {
-                  "example": "any"
-                },
-                "activitiesID": {
-                  "example": "any"
                   "type": "string",
                   "example": "None yet"
                 }
@@ -423,6 +412,9 @@
         "responses": {
           "201": {
             "description": "Group created"
+          },
+          "400": {
+            "description": "Bad Request"
           },
           "401": {
             "description": "Unauthorized"
@@ -477,6 +469,18 @@
             "schema": {
               "type": "object",
               "properties": {
+                "members": {
+                  "example": "any"
+                },
+                "membersID": {
+                  "example": "any"
+                },
+                "activities": {
+                  "example": "any"
+                },
+                "activitiesID": {
+                  "example": "any"
+                },
                 "groupName": {
                   "example": "any"
                 },
@@ -484,12 +488,6 @@
                   "example": "any"
                 },
                 "winVote": {
-                  "example": "any"
-                },
-                "members": {
-                  "example": "any"
-                },
-                "activities": {
                   "example": "any"
                 }
               }
@@ -537,6 +535,39 @@
         }
       }
     },
+    "/groups/{id}/join": {
+      "post": {
+        "tags": [
+          "Groups"
+        ],
+        "description": "Join a group as the currently logged-in user",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Joined group successfully"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Not authenticated"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
     "/groups/btnCreateGroup": {
       "post": {
         "description": "",
@@ -559,23 +590,6 @@
         "responses": {
           "200": {
             "description": "OK"
-    "/groups/{id}/join": {
-      "post": {
-        "tags": [
-          "Groups"
-        ],
-        "description": "Join a group as the currently logged-in user",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Joined group successfully"
           },
           "400": {
             "description": "Bad Request"
